--- a/node-basic-cache/package.json
+++ b/node-basic-cache/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^3.23.1",
-    "mongodb": "^4.1.4"
+    "mongodb": "^4.1.4",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
